apps/iot/zwave-js-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zwave-js-ui
spec:
  type: ClusterIP
  selector:
    app: zwave-js-ui
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: websocket
      protocol: TCP
      port: 3000
      targetPort: websocket
