apps/iot/zwave-js-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zwave-js-ui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-cluster-issuer
spec:
  ingressClassName: traefik
  tls:
    - secretName: zwave-tls-cert
      hosts:
        - zwave-new.travisprosser.com
  rules:
    - host: zwave.home-server-k3s.lan
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: zwave-js-ui
                port:
                  name: http
    - host: zwave-new.travisprosser.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: zwave-js-ui
                port:
                  name: http
